--- a/name/main.tex
+++ b/name/main.tex
@@ -208,7 +208,7 @@ In this study we consider the SBC and FC as a system of currents and provide a c
 \end{itemize}
 Here, we propose the circulation off southern Australia, comprising the SBC, FC, coastal currents (over the shallow shelf) and onshore flows (from the ocean interior), be known as the Southern Australia Current System.
 
-The next section provides a description of the datasets (Section~\ref{Datasets}), the derivation of mass-conserving geostrophic velocities (Section~\ref{Geostrophic velocity derivation}), the volume definition of the SBC and FC (Section~\ref{SBC and FC definition}), and the derivation of a Southern Australia Current System transport budget (Section~\ref{Transport budget derivation}). Section~\ref{Results and Discussion} presents the results where the system three-dimensional structure is described in Section~\ref{Southern Australia Current System Structure} and the system transport budget is described in Section~\ref{Southern Australia Current System Transport Budget}. Finally, Section~\ref{Summary} summarizes the analysis and presents a closing discussion on the SBC and FC coupling and seasonality in Section~\ref{Closing discussion}.
+The next section provides a description of the datasets (Section~\ref{Datasets}), the derivation of mass-conserving geostrophic velocities (Section~\ref{Geostrophic velocity derivation}), the volume definition of the SBC and FC (Section~\ref{SBC and FC definition}), and the derivation of a Southern Australia Current System transport budget (Section~\ref{Transport budget derivation}). Section~\ref{Results and Discussion} presents the results where the system three-dimensional structure is described in Section~\ref{Southern Australia Current System Structure}, the transport budget in Section~\ref{Southern Australia Current System Transport Budget} and the SBC and FC coupling and seasonality in Section~\ref{Closing discussion}. Finally, Section~\ref{Summary} summarizes the analysis and presents a closing discussion.
 
 \section{Methodology} \label{Methodology}
 \subsection{Datasets} \label{Datasets}
@@ -379,7 +379,7 @@ The slope-FC is located around \SI{600}{\meter} and found in most sections along
 The offshore-FC also intensifies to the west towards Cape Leeuwin. The offshore-FC is either weaker or detached from the slope-FC where the shelf slant is strong (Portland and King island sections) and where the slope is gentle (eastern Bight section). While the shelf orientation and slope steepness may play a role in maintaining these FC components, the detachment between the slope-FC and the offshore-FC may indicate they are independent features occasionally merging and separating as the topography varies. Overall, the FC is strongest at Cape Pasley and Cape Leeuwin where it reaches mean speed up to \SI{10}{\centi\meter\per\second}, which agrees well with FC speed records from \citet{Cresswell1993}.
 
 One noticeable difference between CARS and MOM01 is at the Cape Leeuwin section. Here, in CARS, the FC weakens and splits producing another westward flow further offshore. In MOM01, this further offshore flow is eastward. 
-In the next sub-Section, we identify this vertically coherent eastward jet as the southern arm of the anti-cyclonic Albany High (\citeauthor{Middleton2003} \citeyear{Middleton2003}, \citeauthor{Middleton2007} \citeyear{Middleton2007}, \citeauthor{McCartney2007} \citeyear{McCartney2007}) clearly visible off Cape Leeuwin and Pasley in MOM01 (and, off Cape Pasley in CARS too).
+In the next sub-Section, we identify this vertically coherent eastward jet as the southern arm of the anti-cyclonic Albany High (\citeauthor{Middleton2003} \citeyear{Middleton2003}, \citeauthor{Middleton2007} \citeyear{Middleton2007}, \citeauthor{McCartney2007} \citeyear{McCartney2007}) clearly visible off Cape Leeuwin and Pasley in MOM01.
 
 \subsubsection{Depth-integrated velocity maps}\label{Depth-integrated velocity maps}
 We now examine the upper and lower layer velocity fields in depth-integrated velocity maps (Fig.\,\ref{f03_fig1_}). In CARS, the SBC eastward flow is interrupted by reversals, notably near Albany, between Cape Carnot and Cape Jaffa, and west of Tasmania (Fig.\,\ref{f03_fig1_}a). In addition to CARS caveats described in Section\,\ref{Datasets}, localised SBC reversals there may due to the mean field capturing some of the intense eddy activity over the shelf, which was observed in MOM01 on 5-day average timescales (not shown). Regardless, the SBC magnitude and width agree well between CARS and MOM01. In MOM01, the SBC flow is a narrow, continuous eastward boundary current (Fig.\,\ref{f03_fig1_}c).
@@ -489,7 +489,7 @@ Further inshore, there is a coupling between the SBC and offshore-FC which provi
     Long-term mean Ekman drift (\si{\square\meter\per\second}) estimated from (a) ERA-Interim winds and (b) CORE2-NYF winds (see Section~\ref{Datasets}). The magnitude of the Ekman drift is indicated by the shading. To illustrate weaker flows better, arrow lengths are proportional to the square root of the vector amplitudes.}
 \end{figure}
 
-The transport budget also revealed a coupling between the SBC and the slope-FC where the aforementioned Ekman drift is downwelled into the slope-FC\@. We examine maps of vertical flows along $z\sub{int}$ in MOM01 in Fig.\,\ref{f16_fig1_} to examine the spatial variability of the annual-mean downwellings along the coast. We note that we do not show the vertical velocities produced by the Zero-Divergence adjustment, neither in this Figure nor in Fig.\,\ref{f07_fig1_}. This is because the geostrophic calculation (before and after the Zero-Divergence adjustment) produces a noisy vertical-velocity field above complex bottom topography (evident in Fig.\,\ref{f04_fig1_}b,c in local reversal in accumulated upwellings/downwellings). Thus, these fields are useful only when integrated over a long distance as in our cumulative transport calculations. For example, the longshore integration of vertical velocities at the base of the SBC (Eq. \ref{eq:6}) reveals the vertical velocity that compensates the SBC flow above it.
+The transport budget also revealed a coupling between the SBC and the slope-FC where the aforementioned Ekman drift is downwelled into the slope-FC\@. We examine maps of vertical flows along $z\sub{int}$ in MOM01 in Fig.\,\ref{f16_fig1_} to examine the spatial variability of the annual-mean downwellings along the coast. We note that we do not show the vertical velocities produced by the Zero-Divergence adjustment, neither in this Figure nor in Fig.\,\ref{f07_fig1_}. This is because the geostrophic calculation (before and after the Zero-Divergence adjustment) produces a noisy vertical-velocity field above complex bottom topography (evident in Fig.\,\ref{f04_fig1_}b,c in local reversal in accumulated upwellings/downwellings). Thus, these fields are useful only when integrated over a long distance as in our cumulative transport calculations. For example, the longshore integration of vertical velocities at the SBC base (Eq. \ref{eq:6}) reveals the vertical velocity that compensates the SBC flow above it.
 %
 \begin{figure}[ht]
 \noindent\includegraphics
@@ -501,7 +501,7 @@ The transport budget also revealed a coupling between the SBC and the slope-FC w
 
 The vertical flows along the upper slope at \SI{-250}{\meter} are downwelling throughout the southern Australian shelves. The downwelling is strong where the slope is steep particularly outside the Great Australian Bight region. In the Bight, the slope is less steep and the downwelling is weaker. The primarily onshore direction of the Ekman drift is consistent with the downwelling found all along the coast. The downwelling is most pronounced in the Leeuwin Current Extension and Zeehan Current regions, where the onshore Ekman drift is strongest (Fig.\,\ref{f18_fig1_}). In the Bight and Gulf regions the Ekman drift curls anti-clockwise resulting in weak downwelling, which is further reduced in the Bight where the slope is less steep.
 
-Finally, there is also an inverse seasonal relationship between the SBC and the FC which we briefly discuss here. Fig.\,\ref{f19_fig1_} shows the summer and autumn states in MOM01 for the SBC transport ($\mathcal{U}\sub{SBC}$, Fig.\,\ref{f19_fig1_}a) and the FC transport ($\mathcal{U}\sub{FC}$, Fig.\,\ref{f19_fig1_}b). We show the summer and the autumn states only as they exhibit the strongest deviation from the annual-mean. Winter and spring states are much closer to the annual-mean (not shown). \citet{Oke2018} also found that the SBC are strongest in autumn, decrease in winter and spring and are weakest in summer. 
+Finally, there is also an inverse seasonal relationship between the SBC and the FC which we briefly discuss here. Fig.\,\ref{f19_fig1_} shows the summer and autumn states in MOM01 for the SBC transport ($\mathcal{U}\sub{SBC}$, Fig.\,\ref{f19_fig1_}a) and the FC transport ($\mathcal{U}\sub{FC}$, Fig.\,\ref{f19_fig1_}b). We show all seasons but analyse the summer and the autumn states only as they exhibit the strongest deviation from the annual-mean. \citet{Oke2018} also found that the SBC are strongest in autumn, decrease in winter and spring and are weakest in summer. 
 %
 \begin{figure}[p]
 \noindent\includegraphics
@@ -589,16 +589,14 @@ from the FC, which is in turn downwelled as $\mathcal{W}\sub{SBC} = \SI{-2}{Sv}$
 
 The annual-mean FC is weak or absent
 off the western Tasmanian shelf and Bass Strait
-as the Tasman Leakage carries
-away most of the FC transport (\SI{-11}{Sv})
-near South East Cape due westward into the South Australian Basin. The onshore flows along the slanted shelf are weak and result
+as the Tasman Leakage carries \SI{-11}{Sv} into the South Australian Basin interior with no direct retroflection into the FC off western Tasmania in our transport budget. The onshore flows along the slanted shelf are weak and result
 in only a weak increase to the FC transport (\SI{1.9}{Sv})
 in the eastern Great Australian Bight. When the shelf becomes zonal, the onshore flows are much stronger and
 accelerate the FC to
 \SI{7.8}{Sv} by Cape Carnot
 (the western end of the Bight)
 and to \SI{12.3}{Sv} by Cape Leeuwin.
-Overall, 2.5\% of the net onshore flows occur west of Tasmania, 17.8\% along the slanted shelf, 50\% (\SI{-5.9}{Sv})
+Overall, 20.5\% of the net onshore flows occur along the slanted shelf, 50\% (\SI{-5.9}{Sv})
 in the zonal Great Australian Bight,
 and 29.7\% in the zonal shelf region from Cape Carnot to Cape Leeuwin. Therefore, nearly 80\% of the onshore flow contribution to the FC increase occurs along the zonal shelf. Another \SI{+0.5}{Sv} net gain from the SBC comes from
 downwelling, which
