minor fixes before reviews

--- a/name/main.tex
+++ b/name/main.tex
@@ -416,7 +416,7 @@ the SBC which are referenced in Fig.\,\ref{f04_fig1_} ($\mathcal{V}\sub{CC}$, Eq
 the FC ($\mathcal{V}\sub{OF}$, Eq.\,\ref{eq:8}; $\mathcal{V}\sub{FC}$, Eq.\,\ref{eq:9}; $\mathcal{W}\sub{FC}$, Eq.\,\ref{eq:10}). This analysis is further summarised and simplified in Section~\ref{Summary} and Fig.\,\ref{Slide1}.
 
 \subsubsection{SBC budget}\label{SBC budget}
-The SBC transport $\mathcal{U}\sub{SBC}$ (Eq.\,\ref{eq:3}, Fig.\,\ref{f04_fig1_}a black lines) exhibits significantly higher variations in CARS than in MOM01, particularly in the Leeuwin Current Extension (see also Fig.\,\ref{f03_fig1_}, see Section\,\ref{Southern Australia Current System Structure} for CARS versus MOM01 discussion). Nonetheless, the trend of the South Australian Current and the Zeehan Current transport in CARS roughly agrees with those in MOM01. Because transport variability is stronger in CARS, we describe the transport evolution and changes from full transport in MOM01, simply because it is easier to identify them in MOM01. It is worth noting here that in MOM01, the transport adjusted via the Zero Divergence method (i.e., Ekman plus geostrophic transport from the Zero Divergence method applied to the model's temperature and salinity field and wind data) agrees very well with the full transport determined from the model's full velocity field. The Leeuwin Current Extension decreases from $\mathcal{U}\sub{SBC} =$ \num{1.1} to about \SI{0.1}{Sv}, the South Australian Current fluctuates with the transport across the zonal shelf remaining stable and that across the the slanted shelf increasing to \SI{0.3}{Sv}, and the Zeehan Current slightly increasing to about \SI{0.4}{Sv}.
+The SBC transport $\mathcal{U}\sub{SBC}$ (Eq.\,\ref{eq:3}, Fig.\,\ref{f04_fig1_}a black lines) exhibits significantly higher variations in CARS than in MOM01, particularly in the Leeuwin Current Extension (see also Fig.\,\ref{f03_fig1_}, see Section\,\ref{Southern Australia Current System Structure} for CARS versus MOM01 discussion). Nonetheless, the trend of the South Australian Current and the Zeehan Current transport in CARS roughly agrees with those in MOM01. Because transport variability is stronger in CARS, we describe the transport evolution and changes from full transport in MOM01, simply because it is easier to identify them in MOM01. It is worth noting here that in MOM01, the transport adjusted via the Zero Divergence method (i.e., Ekman plus geostrophic transport from the Zero Divergence method applied to the model's temperature and salinity field and wind data) agrees very well with the full transport determined from the model's full velocity field. The Leeuwin Current Extension decreases from $\mathcal{U}\sub{SBC} =$ \num{1.1} to about \SI{0.1}{Sv}, the South Australian Current fluctuates with the transport across the zonal shelf remaining stable and that across the the slanted shelf increasing to \SI{0.3}{Sv}, and the Zeehan Current slightly increasing to about \SI{0.4}{Sv}. The Leeuwin Current Extension decrease from west to east is consistent with \citepos{YitSenBull2016} transport budget although their Lagrangian current transport estimates were stronger. One explanation is our fixed boundary transport budget can, in some places, include westward flows from the adjacent FC, possibly underestimating our Leeuwin Current Extension transport.  
 %
 \begin{figure}[p]
 \noindent\includegraphics
@@ -437,8 +437,7 @@ due to the downwelling.
 The zonal South Australian Current's steady transport is maintained by compensating lateral inflows that balance the downwelling in this region. The weak increase
 in the slanted South Australian Current's transport and the Zeehan Current's transport is essentially due to an increase in lateral inflows.
 
-To summarise, as the Leeuwin Current Extension flows around the southwest corner of Australia, it loses most of its transport due to downwelling
- nd lateral offshore flow.
+To summarise, as the Leeuwin Current Extension flows around the southwest corner of Australia, it loses most of its transport due to downwelling and lateral offshore flow.
 Then the downwelling is reduced and the western South Australian Current flows along the zonal shelf break without much systematic change in its transport.
 As the South Australian Current flows over the slanted shelf break, it receives progressively increasing lateral inflows which are partly overturned by weakly increasing downwelling flows, resulting in a stronger slanted South Australian Current\@.
 The Zeehan Current grows
