Second last edits

--- a/name/main.tex
+++ b/name/main.tex
@@ -130,7 +130,7 @@
 \cortext[cor1]{Climate Change Research Centre, Level 4 Mathews Building, The University of New South Wales, Sydney NSW 2052}
 
 \begin{abstract}
-We quantify for the first time, the annual-mean structure, transport budget and coupling between a series of surface and deep currents along the southern Australian shelves, that we propose be collectively known as the South Australian Current System. The system contains eastward Shelf Break Currents (SBC) including the Leeuwin Current Extension, the South Australian Current and the Zeehan Current; and a counter-flowing westward Flinders Current (FC) found both offshore of, and underneath, the SBC\@.
+We quantify for the first time, the annual-mean structure, transport budget and coupling between a series of surface and deep currents along the southern Australian shelves, that we propose be collectively known as the Southern Australia Current System. The system contains eastward Shelf Break Currents (SBC) including the Leeuwin Current Extension, the South Australian Current and the Zeehan Current; and a counter-flowing westward Flinders Current (FC) found both offshore of, and underneath, the SBC\@.
 In this work, we use a climatological hydrography gridded at high resolution and a high resolution oceanic general circulation model simulation forced by an atmospheric climatology to describe the system.
 
 The westward FC has an annual-mean speed up to \SI{10}{\centi\meter\per\second} and a dual structure with (1) the slope-FC, a small slope-trapped part near 600m depth, which is an undercurrent to the SBC; and (2) the offshore-FC, a large deep-reaching, surface-intensified part located offshore of the SBC\@.
@@ -717,7 +717,7 @@ where $V_{n}$ is the inflow across the north face of the current (Fig.\,\ref{sli
 
 Hence, for a given meridional slice, some extra flows across the north face equivalent to $V_{n}dl_{n}$ are included in the current transport and some flows across the south face equivalent to $V_{s}dl_{s}$ are not included in the current transport, in comparison to a normal slice. When the current is wider, $dl_n$ and $dl_s$ become accordingly longer and the difference between $\mathcal{U}$ and $\hat{\mathcal{U}}$ tends to be larger (depending on the signs and sizes of $V_n$ and $V_s$).
 
-\subsubsection{On the difference between zonal transport and longshore transport in the South Australian Current System case}
+\subsubsection{On the difference between zonal transport and longshore transport in the Southern Australia Current System case}
 An implication of the above discussion is that, while it is true that volume transports with meridional slices will be different to volume transports with normal slices where the shelf is slanted, the difference between the meridional slicing and the normal slicing will be minimal provided:
 %
 \begin{itemize}
