--- a/name/main.tex
+++ b/name/main.tex
@@ -130,23 +130,26 @@
 \cortext[cor1]{Climate Change Research Centre, Level 4 Mathews Building, The University of New South Wales, Sydney NSW 2052}
 
 \begin{abstract}
-We quantify for the first time, the annual-mean structure, transport budget and coupling between a series of surface and deep currents along the southern Australian shelves, that we propose be collectively known as the Southern Australia Current System. The system contains eastward Shelf Break Currents (SBC) including the Leeuwin Current Extension, the South Australian Current and the Zeehan Current; and a counter-flowing westward Flinders Current (FC) found both offshore of, and underneath, the SBC\@.
-In this work, we use a climatological hydrography gridded at high resolution and a high resolution oceanic general circulation model simulation forced by an atmospheric climatology to describe the system.
+We quantify the annual-mean structure, transport budget and coupling between surface and deep currents along the southern Australian shelves, that we propose be collectively known as the Southern Australia Current System. 
+The system contains eastward Shelf Break Currents (SBC) including the Leeuwin Current Extension, the South Australian Current and the Zeehan Current; and a counter-flowing westward Flinders Current (FC).
+In this work, we use a high resolution climatological hydrography and a high resolution ocean model forced by an atmospheric climatology.
 
-The westward FC has an annual-mean speed up to \SI{10}{\centi\meter\per\second} and a dual structure with (1) the slope-FC, a small slope-trapped part near 600m depth, which is an undercurrent to the SBC; and (2) the offshore-FC, a large deep-reaching, surface-intensified part located offshore of the SBC\@.
-East of \ang{132}E, where the continental shelf is slanted (not zonally oriented), the annual-mean FC is a weak westward flow disconnected from the Tasman Leakage, which is a westward outflow south of Tasmania transporting \SI{11}{Sv} offshore.
-The FC is fed by horizontal onshore flows across the South Australian Basin. Nearly 80\% of these flows occur where the continental shelf is zonal (west of \ang{132}E), resulting in annual-mean FC transport of \SI{12.3}{Sv} at Cape Leeuwin, the southwestern limit of Australia.
-To the south of the FC, a deep-reaching eastward jet may be an expression of the southern branch of the Albany High, an offshore gyre south of Australia.
+The westward FC is dual structured with (1) the slope-FC, an undercurrent to the SBC trapped near \SI{600}{\meter} depth; and (2) the offshore-FC, a large deep-reaching flow located offshore of the SBC\@.
+Along the slanted shelf (not zonally oriented), onshore flows feeding into the FC are weak, and the FC is disconnected from the Tasman Leakage south of Tasmania.
+Along the zonal shelf, where nearly 80\% of total onshore flows occur, the FC intensifies resulting in \SI{12.3}{Sv} transport at Cape Leeuwin.
 
-The eastward SBC are continuous flows with annual-mean speed up to \SI{20}{\centi\meter\per\second} located in the upper \SI{250}{\meter}. A strong annual-mean downwelling occurs from the SBC into the slope-FC where the slope is steep and may be important in maintaining the slope-FC\@.
-The annual-mean Leeuwin Current Extension transport decreases from \SI{1.1}{Sv} as it rounds Cape Leeuwin to \SI{0.1}{Sv} at the western edge of the Great Australian Bight due to strong downwelling and offshore exports near Cape Leeuwin. 
-East of Cape Leeuwin and along the zonal shelf, the South Australian Current transport is steady due to onshore flows balanced by downwelling exports. Along the slanted shelf, the onshore flows are stronger than downwelling exports and result in an increased Zeehan Current transport up to \SI{0.4}{Sv} eastward south of Tasmania.
+The eastward SBC are continuous flows in the upper \SI{250}{\meter}. 
+Over steep slopes, downwelling occurs from the SBC into the slope-FC and may be important in maintaining the slope-FC\@.
+The Leeuwin Current Extension transport decreases from \SI{1.1}{Sv} at Cape Leeuwin to \SI{0.1}{Sv} near the Great Australian Bight due to strong downwelling and offshore exports around Cape Leeuwin. 
+The South Australian Current is weak and steady, and the Zeehan Current increases to \SI{0.4}{Sv} due to onshore flows stronger than downwelling exports.
 
-We find that the SBC and offshore-FC are coupled through onshore Ekman drift and that the SBC and slope-FC are coupled through downwelling. 
-The combined effect of the SBC--offshore-FC horizontal pair and SBC--slope-FC vertical pair is a conversion of widespread northward Ekman drift into downwelling with little impact on the eastward SBC transport. In contrast, the onshore flows feeding into the FC are largely converted into increasing westward FC transport.
-Even though the Leeuwin Current System off western Australia and the Southern Australia Current System are fed by different onshore transports, namely a pressure gradient-driven geostrophic transport off western Australia and a wind-driven Ekman drift off southern Australia, the annual-mean circulation of the two systems are remarkably similar.
+We find that the SBC and offshore-FC are coupled through onshore Ekman drift and the SBC and slope-FC are coupled through downwelling. 
+The combined effect is a conversion of widespread northward Ekman drift into downwelling with little impact on the eastward SBC transport. 
+In contrast, the onshore flows feeding into the FC are largely converted into increasing westward FC transport.
+Even though the Leeuwin Current System off western Australia is fed by geostrophic flows and the Southern Australia Current System is fed by Ekman drift, the annual-mean circulation of the two systems are remarkably similar.
 
-An overview of the system's seasonality shows the strength of the SBC and FC vary in opposite phase. In summer, when the winds are upwelling favourable, the SBC are weaker and partly reversed (to westward). In autumn, the winds become downwelling favourable and the FC is weaker and partly reversed (to eastward). In contrast, the Leeuwin Current System persists annually. The balance mechanism maintaining the seasonal opposition in intensity between the SBC and FC is unknown and warrants further research.
+In summer, when the winds are upwelling favourable, the SBC are weaker and partly reversed (to westward). In autumn, the winds become downwelling favourable and the FC is weaker and partly reversed (to eastward). In contrast, the Leeuwin Current System persists annually. The balance mechanism maintaining the seasonal opposition between the SBC and FC warrants further research.
+
 \end{abstract}
 
 \begin{keyword}
